Run grr_manage repo-repair on fixture GRR repository.

--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/genomic_resource.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg19/phastCons100/genomic_resource.yaml
@@ -21,7 +21,8 @@ scores:
     type: float
     desc: "phastCons100"
     index: 3
-    number_hist:
+    histogram:
+      type: number
       number_of_bins: 10
       view_range:
         max: 1.0
