--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/statistics/histogram_cadd_phred.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTCADD/statistics/histogram_cadd_phred.yaml
@@ -210,3 +210,8 @@ config:
   x_log_scale: false
   x_min_log: null
   y_log_scale: false
+max_value: 8.178
+min_value: 6.202
+out_of_range_bins:
+- 0
+- 0
