--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/statistics/histogram_phastCons100way.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTphastCons100way/statistics/histogram_phastCons100way.yaml
@@ -30,3 +30,8 @@ config:
   x_log_scale: false
   x_min_log: null
   y_log_scale: false
+max_value: 0.253
+min_value: 0.0
+out_of_range_bins:
+- 0
+- 0
