--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/statistics/histogram_altFreq2.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/TESTFreq/statistics/histogram_altFreq2.yaml
@@ -210,8 +210,8 @@ config:
   x_log_scale: false
   x_min_log: null
   y_log_scale: false
-max_value: 10.4352
-min_value: 0.8
+max_value: .nan
+min_value: .nan
 out_of_range_bins:
 - 0
 - 0
