--- a/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/statistics/stats.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/genomic_resources/hg38/GRCh38-hg38/gene_models/refSeq_20200330/statistics/stats.yaml
@@ -1,7 +1,18 @@
-transcript number: 151
-protein coding transcript number: 84
-gene number: 80
-protein coding gene number: 37
-chromosome number: 2
-chr1 transcript numbers: 122
-chr2 transcript numbers: 29
+resource_id: hg38/GRCh38-hg38/gene_models/refSeq_20200330
+chromosome_count: 2
+global:
+  transcript_number: 151
+  protein_coding_transcript_number: 84
+  gene_number: 80
+  protein_coding_gene_number: 37
+chromosomes:
+  chr1:
+    transcript_number: 122
+    protein_coding_transcript_number: 71
+    gene_number: 67
+    protein_coding_gene_number: 31
+  chr2:
+    transcript_number: 29
+    protein_coding_transcript_number: 13
+    gene_number: 13
+    protein_coding_gene_number: 6
