--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/LGD/statistics/histogram_LGD_rank.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/LGD/statistics/histogram_LGD_rank.yaml
@@ -310,27 +310,8 @@ config:
   x_log_scale: false
   x_min_log: null
   y_log_scale: false
-max_value: !!python/object/apply:numpy.core.multiarray.scalar
-- &id001 !!python/object/apply:numpy.dtype
-  args:
-  - f8
-  - false
-  - true
-  state: !!python/tuple
-  - 3
-  - <
-  - null
-  - null
-  - null
-  - -1
-  - -1
-  - 0
-- !!binary |
-  AAAAAKD20UA=
-min_value: !!python/object/apply:numpy.core.multiarray.scalar
-- *id001
-- !!binary |
-  AAAAAAAA8D8=
+max_value: 18394.5
+min_value: 1.0
 out_of_range_bins:
 - 0
 - 0
