--- a/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/statistics/histogram_RVIS.yaml
+++ b/dae_conftests/dae_conftests/tests/fixtures/test_repo/gene_scores/RVIS/statistics/histogram_RVIS.yaml
@@ -310,27 +310,8 @@ config:
   x_log_scale: false
   x_min_log: null
   y_log_scale: true
-max_value: !!python/object/apply:numpy.core.multiarray.scalar
-- &id001 !!python/object/apply:numpy.dtype
-  args:
-  - f8
-  - false
-  - true
-  state: !!python/tuple
-  - 3
-  - <
-  - null
-  - null
-  - null
-  - -1
-  - -1
-  - 0
-- !!binary |
-  FK5H4XoUDMA=
-min_value: !!python/object/apply:numpy.core.multiarray.scalar
-- *id001
-- !!binary |
-  AAAAAAAAHsA=
+max_value: -3.51
+min_value: -7.5
 out_of_range_bins:
 - 0
 - 0
